# 2048-Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  GameTime.cpp  Menu.cpp  MoveHandler.cpp  Time.cpp  helpers.cpp  main.cpp
src/Game/: Game.cpp  Game.h
src/Game/MoveHandler/: MoveHandler.cpp  MoveHandler.h
src/Menu/: Menu.cpp  Menu.h
src/headers/: Game.h  GameTime.h  Menu.h  MoveHandler.h  Time.h  helpers.h
test/: test.cpp
